--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ redis = {version = "^4.4.2", extras = ["hiredis"]}
 httptools = "^0.5.0"
 jwt = "^1.3.1"
 prometheus-fastapi-instrumentator = "6.0.0"
+colorlog = "6.7.0"
 
 
 [tool.poetry.dev-dependencies]
