chore: updated configs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -167,12 +167,16 @@
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-file-progress": "^1.3.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-theme-colors": "^2.0.9",
     "eslint-plugin-translation-vars": "^0.0.1-security",
     "file-loader": "^6.2.0",
