--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -5,6 +5,8 @@ prepend_sys_path = .
 output_encoding = utf-8
 # truncate_slug_length = 40
 
+[lcfs_db]
+sqlalchemy.url = 
 
 [post_write_hooks]
 hooks = black,autoflake,isort
