feat: docker files configured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: "3"
 
 services:
   db:
-    platform: linux/amd64
     image: postgres:14.2
-    container_name: lcfs_db
     environment:
       POSTGRES_DB: lcfs
       POSTGRES_USER: lcfs
@@ -15,23 +13,34 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   redis:
-    image: redis:latest
+    image: bitnami/redis:6.2.5
+    restart: always
+    environment:
+      ALLOW_EMPTY_PASSWORD: "yes"
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/bitnami/redis/data
 
   backend:
     build:
       context: ./backend
-      dockerfile: "Dockerfile.dev"
+      dockerfile: "Dockerfile"
+      target: dev
     volumes:
       - type: bind
         source: ./backend
         target: /app
         consistency: cached
     environment:
-      PORT: 8000
+      LCFS_DB_HOST: db
+      LCFS_DB_PORT: 5432
+      LCFS_DB_USER: lcfs
+      LCFS_DB_PASS: development_only
+      LCFS_DB_BASE: lcfs
       LCFS_REDIS_HOST: redis
       LCFS_REDIS_PORT: 6379
+      LCFS_RELOAD: true
     ports:
       - '8000:8000'
     depends_on:
@@ -39,19 +48,16 @@ services:
       - redis
 
   frontend:
-    platform: linux/amd64
     build:
       dockerfile: Dockerfile.dev
       context: ./frontend
-    command: >
-      bash -c
-      "npm install && npm run start"
+    command: npm run start
     ports:
       - 3000:3000
     volumes:
       - ./frontend:/app
-      - node_modules:/app/node_modules
 
 volumes:
   node_modules:
   postgres_data:
+  redis_data:
