--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -7,6 +7,7 @@ output_encoding = utf-8
 
 [lcfs_db]
 sqlalchemy.url = 
+script_location = lcfs/db/migrations
 
 [post_write_hooks]
 hooks = black,autoflake,isort
