--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ httptools = "^0.5.0"
 jwt = "^1.3.1"
 prometheus-fastapi-instrumentator = "6.0.0"
 colorlog = "6.7.0"
+distlib = "^0.3.3"
 
 
 [tool.poetry.dev-dependencies]
