--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,9 +12,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.89.1"
+fastapi = "^0.104.0"
 uvicorn = { version = "^0.20.0", extras = ["standard"] }
-pydantic = {version = "^1.10.4", extras = ["dotenv"]}
+pydantic = {extras = ["email"], version = "^2.4.2"}
 yarl = "^1.8.2"
 ujson = "^5.7.0"
 SQLAlchemy = {version = "^2.0.0", extras = ["asyncio"]}
@@ -26,6 +26,7 @@ jwt = "^1.3.1"
 prometheus-fastapi-instrumentator = "6.0.0"
 colorlog = "6.7.0"
 distlib = "^0.3.3"
+pydantic-settings = "^2.0.3"
 
 
 [tool.poetry.dev-dependencies]
