--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,43 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/mdx": "^2.3.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@react-keycloak/web": "^3.4.0",
-    "@svgr/webpack": "^8.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "babel-jest": "^27.4.2",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "bootstrap": "^5.3.2",
-    "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^3.1.1",
     "fs-extra": "^10.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.5.0",
-    "jest-resolve": "^27.4.2",
+    "keycloak-js": "^22.0.5",
     "postcss": "^8.4.4",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "prompts": "^2.4.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.7.4",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
@@ -47,18 +22,9 @@
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.12.1",
     "resolve": "^1.20.0",
-    "resolve-url-loader": "^5.0.0",
     "semver": "^7.3.5",
-    "source-map-loader": "^3.0.0",
-    "tailwindcss": "^3.0.2",
-    "terser-webpack-plugin": "^5.2.5",
-    "theme-colors": "^0.0.5",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1"
+    "yargs": "^17.7.2"
   },
   "scripts": {
     "_lint": "eslint --ignore-path=.eslintignore --ext .js,.jsx,.ts,tsx .",
@@ -75,83 +41,19 @@
     "plugins:storybook": "cd packages/lcfs-ui-demo && npm run storybook",
     "prettier": "npm run _prettier -- --write",
     "prettier-check": "npm run _prettier -- --check",
-    "prod": "npm run build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "resetMocks": true
+    "prod": "npm run build",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
-    "@babel/polyfill": "^7.12.1",
+    "@babel/eslint-parser": "^7.22.15",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
-    "@babel/runtime-corejs3": "^7.23.2",
-    "@emotion/babel-plugin": "^11.11.0",
+    "@babel/runtime": "^7.23.2",
     "@emotion/babel-preset-css-prop": "^11.11.0",
     "@emotion/react": "^11.11.1",
+    "@mdx-js/loader": "^3.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@storybook/addon-docs": "^7.5.1",
     "@storybook/addon-essentials": "^7.5.1",
     "@storybook/addon-interactions": "^7.5.1",
@@ -161,37 +63,60 @@
     "@storybook/react": "^7.5.1",
     "@storybook/react-webpack5": "^7.5.1",
     "@storybook/testing-library": "^0.2.2",
+    "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.0.0",
+    "babel-jest": "^27.4.2",
     "babel-loader": "^9.1.3",
-    "babel-plugin-emotion": "^11.0.0",
-    "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
-    "babel-plugin-lodash": "^3.3.4",
+    "babel-preset-react-app": "^10.0.1",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
+    "cypress": "^13.4.0",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-file-progress": "^1.3.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-theme-colors": "^2.0.9",
-    "eslint-plugin-translation-vars": "^0.0.1-security",
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-testing-library": "^6.1.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "glob": "^10.3.10",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^6.2.1",
     "prettier": "^3.0.3",
-    "prettier-plugin-packagejson": "^2.4.6",
+    "react-app-polyfill": "^3.0.0",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.4",
     "sass-loader": "^13.3.2",
+    "source-map-loader": "^3.0.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "storybook": "^7.5.1",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.2.5",
     "vm-browserify": "^1.1.2",
-    "webpack-bundle-analyzer": "^4.9.1"
+    "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.6.0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "workbox-webpack-plugin": "^6.4.1"
   }
 }
