feat: auth flow updated with new configurations

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "resolve": "^1.20.0",
     "semver": "^7.3.5",
     "web-vitals": "^2.1.4",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "zustand": "^4.4.6"
   },
   "scripts": {
     "_lint": "eslint --ignore-path=.eslintignore --ext .js,.jsx,.ts,tsx .",
