--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,11 +22,11 @@ alembic = "^1.9.2"
 asyncpg = {version = "^0.27.0", extras = ["sa"]}
 redis = {version = "^4.4.2", extras = ["hiredis"]}
 httptools = "^0.5.0"
-jwt = "^1.3.1"
 prometheus-fastapi-instrumentator = "6.0.0"
 colorlog = "6.7.0"
 distlib = "^0.3.3"
 pydantic-settings = "^2.0.3"
+pyjwt = "^2.8.0"
 
 
 [tool.poetry.dev-dependencies]
