--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       - 3000:3000
     volumes:
       - ./frontend:/app
+      - node_modules:/app/node_modules
 
 volumes:
   node_modules:
