--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,13 +1,13 @@
 [alembic]
-script_location = lcfs/db/migrations
+script_location = %(ALEMBIC_SCRIPT_LOCATION)s
 file_template = %%(year)d-%%(month).2d-%%(day).2d-%%(hour).2d-%%(minute).2d_%%(rev)s
 prepend_sys_path = .
 output_encoding = utf-8
 # truncate_slug_length = 40
 
-[lcfs_db]
-sqlalchemy.url = 
-script_location = lcfs/db/migrations
+; [lcfs_db]
+; sqlalchemy.url = 
+; script_location = lcfs/db/migrations
 
 [post_write_hooks]
 hooks = black,autoflake,isort
