--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,6 +8,12 @@
 # testing
 /coverage
 
+# cypress
+cypress/videos/
+cypress/screenshots/
+cypress/reports/
+cypress/downloads/
+
 # production
 **/build
 /dist
