feat: updated to use ag grid table

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@react-keycloak/web": "^3.4.0",
+    "@ag-grid-community/client-side-row-model": "^30.2.1",
+    "@ag-grid-community/react": "^30.2.1",
+    "@ag-grid-community/styles": "^30.2.1",
     "axios": "^1.4.0",
     "bfj": "^7.0.2",
     "bootstrap": "^5.3.2",
