--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^30.2.1",
+    "@ag-grid-community/react": "^30.2.1",
+    "@ag-grid-community/styles": "^30.2.1",
+    "@ag-grid-enterprise/range-selection": "^30.2.1",
+    "@ag-grid-enterprise/rich-select": "^30.2.1",
+    "@ag-grid-enterprise/row-grouping": "^30.2.1",
     "@emotion/cache": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
+    "@mui/lab": "^5.0.0-alpha.153",
     "@mui/material": "^5.14.17",
+    "@mui/x-data-grid": "^6.18.1",
     "@react-keycloak/web": "^3.4.0",
     "@ag-grid-community/client-side-row-model": "^30.2.1",
     "@ag-grid-community/react": "^30.2.1",
@@ -63,6 +71,7 @@
     "@emotion/babel-preset-css-prop": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@mdx-js/loader": "^3.0.0",
+    "@mui/x-data-grid-generator": "^6.18.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@storybook/addon-docs": "^7.5.1",
     "@storybook/addon-essentials": "^7.5.1",
