--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@ag-grid-enterprise/row-grouping": "^30.2.1",
     "@emotion/cache": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
     "@mui/icons-material": "^5.14.16",
     "@react-keycloak/web": "^3.4.0",
     "axios": "^1.4.0",
