--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ colorlog = "6.7.0"
 distlib = "^0.3.3"
 pydantic-settings = "^2.0.3"
 pyjwt = "^2.8.0"
+debugpy = "^1.8.0"
 
 
 [tool.poetry.dev-dependencies]
