Organization and Login View

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,15 @@
     "@ag-grid-community/infinite-row-model": "^30.2.1",
     "@ag-grid-community/react": "^30.2.1",
     "@ag-grid-community/styles": "^30.2.1",
-    "@ag-grid-enterprise/range-selection": "^30.2.1",
-    "@ag-grid-enterprise/rich-select": "^30.2.1",
-    "@ag-grid-enterprise/row-grouping": "^30.2.1",
     "@emotion/cache": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.17",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
     "@react-keycloak/web": "^3.4.0",
+    "ag-grid-community": "^31.0.0",
+    "ag-grid-react": "^31.0.0",
     "axios": "^1.4.0",
     "bfj": "^7.0.2",
     "bootstrap": "^5.3.2",
@@ -33,6 +34,7 @@
     "react-query": "^3.39.3",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.12.1",
+    "react-snowfall": "^1.2.1",
     "react-table": "^7.8.0",
     "resolve": "^1.20.0",
     "semver": "^7.3.5",
@@ -72,6 +74,7 @@
     "@emotion/react": "^11.11.1",
     "@mdx-js/loader": "^3.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@storybook/addon-a11y": "^7.6.3",
     "@storybook/addon-docs": "^7.5.1",
     "@storybook/addon-essentials": "^7.5.1",
     "@storybook/addon-interactions": "^7.5.1",
