--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^31.0.0",
@@ -26,12 +28,12 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
+    "keycloak-js": "^23.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
-    "vite-plugin-svgr": "^4.2.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -44,19 +46,25 @@
     "@storybook/react": "^7.6.3",
     "@storybook/react-vite": "^7.6.3",
     "@storybook/test": "^7.6.3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^1.0.1",
     "eslint": "^8.55.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.6.15",
+    "jsdom": "^23.0.1",
     "prop-types": "^15.8.1",
     "sass": "^1.69.5",
     "standard": "^17.1.0",
     "storybook": "^7.6.3",
-    "vite": "^5.0.5"
+    "vite": "^5.0.5",
+    "vite-plugin-svgr": "^4.2.0",
+    "vitest": "^1.0.1"
   }
 }
