feat: cypress integration

--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -8,10 +8,14 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "cross-env NODE_ENV=development storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "cypress:verify": "cypress verify",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:clear": "cypress cache clear"
   },
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^31.0.0",
@@ -52,6 +56,8 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.0.1",
+    "cypress": "^13.6.0",
+    "cypress-vite": "^1.5.0",
     "eslint": "^8.55.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-react": "^7.33.2",
