--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "prettier": "prettier . --check",
+    "prettier:fix": "prettier . --write",
     "preview": "vite preview",
     "storybook": "cross-env NODE_ENV=development storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "storybook:build": "storybook build",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "cypress:verify": "cypress verify",
@@ -59,12 +61,14 @@
     "cypress": "^13.6.0",
     "cypress-vite": "^1.5.0",
     "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.6.15",
     "jsdom": "^23.0.1",
+    "prettier": "3.1.0",
     "prop-types": "^15.8.1",
     "sass": "^1.69.5",
     "standard": "^17.1.0",
