--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ### Python template
 
 .idea/
-.vscode/
+.vscode/*
+!.vscode/extensions.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
