--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   db:
@@ -16,16 +16,16 @@ services:
     image: bitnami/redis:6.2.5
     restart: always
     environment:
-      ALLOW_EMPTY_PASSWORD: "yes"
+      ALLOW_EMPTY_PASSWORD: 'yes'
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis_data:/bitnami/redis/data
 
   backend:
     build:
       context: ./backend
-      dockerfile: "Dockerfile"
+      dockerfile: 'Dockerfile'
       target: dev
     volumes:
       - type: bind
@@ -43,22 +43,22 @@ services:
       LCFS_RELOAD: true
       APP_ENVIRONMENT: dev
     ports:
-      - "8000:8000" # Application port
-      - "5678:5678" # Debugger port
+      - '8000:8000' # Application port
+      - '5678:5678' # Debugger port
     depends_on:
       - db
       - redis
 
-  frontend:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./frontend
-    command: npm run start
-    ports:
-      - 3000:3000
-    volumes:
-      - ./frontend:/app
-      - node_modules:/app/node_modules
+  # frontend:
+  #   build:
+  #     dockerfile: Dockerfile.dev
+  #     context: ./frontend
+  #   command: npm run start
+  #   ports:
+  #     - 3000:3000
+  #   volumes:
+  #     - ./frontend:/app
+  #     - node_modules:/app/node_modules
 
   frontend2:
     build:
