--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -37,7 +37,7 @@
     "@fontsource/material-icons": "^5.0.7",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.19",
+    "@mui/material": "^5.14.20",
     "@react-keycloak/web": "^3.4.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
@@ -85,6 +85,7 @@
     "sass": "^1.69.5",
     "standard": "^17.1.0",
     "storybook": "^7.6.3",
+    "swagger-ui-react": "^5.10.3",
     "vite": "^5.0.5",
     "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.0.1"
