--- a/frontend/Dockerfile-Openshift
+++ b/frontend/Dockerfile-Openshift
@@ -1,15 +1,15 @@
 # Stage 1: Use yarn to build the app
 FROM artifacts.developer.gov.bc.ca/docker-remote/node:16 as builder
+ENV NODE_ENV=production
 WORKDIR /usr/src/app
 COPY ./ ./
-RUN npm install -g npm@9.1.1 \
-    && npm install --omit=dev \
-    && npm install -g webpack webpack-cli
-RUN yes | npm run build-prod
+RUN npm install -g npm@latest && \
+    npm run build && \
+    ls -l
 
 # Stage 2: Copy the JS React SPA into the Nginx HTML directory
-FROM artifacts.developer.gov.bc.ca/docker-remote/bitnami/nginx:1.21.6
-COPY ./nginx.conf /opt/bitnami/nginx/conf/
-COPY --from=builder /usr/src/app/public/build /app
-EXPOSE 3000
-CMD ["nginx", "-g", "daemon off;"]
+# FROM artifacts.developer.gov.bc.ca/docker-remote/bitnami/nginx:1.25.3
+# COPY ./nginx.conf /opt/bitnami/nginx/conf/
+# COPY --from=builder /usr/src/app/public/build /app
+# EXPOSE 3000
+# CMD ["nginx", "-g", "daemon off;"]
