--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -34,11 +34,17 @@
     "@ag-grid-community/styles": "^31.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/material-icons": "^5.0.7",
+    "@fontsource/material-icons": "^5.0.11",
     "@fontsource/roboto": "^5.0.8",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@react-keycloak/web": "^3.4.0",
+    "@storybook/addon-a11y": "^7.6.3",
+    "@storybook/addon-docs": "^7.6.3",
+    "ag-grid-community": "^31.0.0",
+    "ag-grid-react": "^31.0.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
@@ -48,6 +54,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
+    "react-snowfall": "^1.2.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -66,7 +73,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.0.1",
-    "cypress": "^13.6.0",
+    "cypress": "^13.6.1",
     "cypress-vite": "^1.5.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
@@ -86,7 +93,7 @@
     "standard": "^17.1.0",
     "storybook": "^7.6.3",
     "swagger-ui-react": "^5.10.3",
-    "vite": "^5.0.5",
+    "vite": "^5.0.6",
     "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.0.1"
   }
