chore: add in cryptography package for backend. + hook updates

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ distlib = "^0.3.3"
 pydantic-settings = "^2.0.3"
 pyjwt = "^2.8.0"
 debugpy = "^1.8.0"
+cryptography = "^41.0.7"
 
 
 [tool.poetry.dev-dependencies]
