add package cross-env

--- a/frontend/Dockerfile-Openshift
+++ b/frontend/Dockerfile-Openshift
@@ -4,6 +4,7 @@ ENV NODE_ENV=production
 WORKDIR /usr/src/app
 COPY ./ ./
 RUN npm install -g npm@8.19.4 && \
+    npm install cross-env@7.0.3 && \
     npm run build && \
     ls -l
 
