--- a/frontend/Dockerfile-Openshift
+++ b/frontend/Dockerfile-Openshift
@@ -3,8 +3,7 @@ FROM artifacts.developer.gov.bc.ca/docker-remote/node:16 as builder
 ENV NODE_ENV=production
 WORKDIR /usr/src/app
 COPY ./ ./
-RUN npm install -g npm@8.19.4 && \
-    npm install cross-env@7.0.3 && \
+RUN npm install -g npm@8.19.4 cross-env@7.0.3 && \
     npm run build && \
     ls -l
 
