update frontend build

--- a/openshift/templates/frontend/frontend-bc.yaml
+++ b/openshift/templates/frontend/frontend-bc.yaml
@@ -62,7 +62,7 @@ objects:
       type: Git
     strategy:
       dockerStrategy:
-        dockerfilePath: ./Dockerfile-Openshift
+        dockerfilePath: ./Dockerfile.openshift
         env:
           - name: ARTIFACTORY_USER
             valueFrom:
