--- a/frontend/Dockerfile.openshift
+++ b/frontend/Dockerfile.openshift
@@ -1,8 +1,8 @@
-FROM artifacts.developer.gov.bc.ca/docker-remote/node:16 as builder
+FROM artifacts.developer.gov.bc.ca/docker-remote/node:20 as builder
 ENV NODE_ENV=production
 WORKDIR /usr/src/app
 COPY ./ ./
-RUN npm install && \ 
+RUN npm install --production && \ 
     npm run build && \
     ls -l
 
