--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.0.1",
+    "cross-env": "^7.0.3",
     "cypress": "^13.6.1",
     "cypress-vite": "^1.5.0",
     "eslint": "^8.55.0",
