--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@react-keycloak/web": "^3.4.0",
@@ -52,9 +53,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-snowfall": "^1.2.1",
+    "yup": "^1.3.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
