--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "preview": "vite preview",
     "storybook": "cross-env NODE_ENV=development storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "cypress:verify": "cypress verify",
     "cypress:open": "cypress open",
