feat: role based access control work

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ pydantic-settings = "^2.0.3"
 pyjwt = "^2.8.0"
 debugpy = "^1.8.0"
 cryptography = "^41.0.7"
+faker = "^21.0.0"
 
 
 [tool.poetry.dev-dependencies]
