--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "prepare": "cd .. && husky install frontend/.husky",
+    "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install frontend/.husky; fi",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "prettier": "prettier . --check",
@@ -14,7 +14,8 @@
     "preview": "vite preview",
     "storybook": "cross-env NODE_ENV=development storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "cypress:verify": "cypress verify",
     "cypress:open": "cypress open",
@@ -38,6 +39,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@react-keycloak/web": "^3.4.0",
@@ -52,10 +54,16 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-snowfall": "^1.2.1",
-    "zustand": "^4.4.7"
+    "yup": "^1.3.2",
+    "zustand": "^4.4.7",
+    "vite": "^5.0.6",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite-plugin-svgr": "^4.2.0",
+    "swagger-ui-react": "^5.10.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.3",
@@ -71,8 +79,8 @@
     "@testing-library/react": "^14.1.2",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.0.1",
+    "cross-env": "^7.0.3",
     "cypress": "^13.6.1",
     "cypress-vite": "^1.5.0",
     "eslint": "^8.55.0",
@@ -92,9 +100,6 @@
     "sass": "^1.69.5",
     "standard": "^17.1.0",
     "storybook": "^7.6.3",
-    "swagger-ui-react": "^5.10.3",
-    "vite": "^5.0.6",
-    "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.0.1"
   }
 }
