--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -13,7 +13,6 @@ on:
 
 env:
   ## The pull request number of the Tracking pull request to merge the release branch to main
-  PR_NUMBER: 282
   VERSION: 0.2.0
   GIT_URL: https://github.com/bcgov/lcfs.git 
   TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-tools
@@ -46,12 +45,12 @@ jobs:
 
       - name: Build LCFS Backend
         run: |
-          cd openshift/templates/backend
-          oc process -f ./backend-bc.yaml SUFFIX=-build-${{ env.PR_NUMBER }} VERSION=build-${{ env.VERSION }}-${{ env.PR_NUMBER }} GIT_URL=${{ env.GIT_URL }} GIT_REF=refs/pull/${{ env.PR_NUMBER }}/head | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
-          oc start-build --wait=true lcfs-backend-build-${{ env.PR_NUMBER }}
+          cd openshift/templates
+          oc process -f ./backend-bc.yaml VERSION=${{ env.VERSION }} GIT_URL=${{ env.GIT_URL }} GIT_REF=release-${{ env.VERSION }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
+          oc start-build --wait=true lcfs-backend-build-${{ env.VERSION }}
 
       - name: Build LCFS Frontend
         run: |
-          cd openshift/templates/frontend
-          oc process -f ./frontend-bc.yaml SUFFIX=-build-${{ env.PR_NUMBER }} VERSION=build-${{ env.VERSION }}-${{ env.PR_NUMBER }} GIT_URL=${{ env.GIT_URL }} GIT_REF=refs/pull/${{ env.PR_NUMBER }}/head | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
-          oc start-build --wait=true lcfs-frontend-build-${{ env.PR_NUMBER }}
+          cd openshift/templates
+          oc process -f ./frontend-bc.yaml VERSION=${{ env.VERSION }} GIT_URL=${{ env.GIT_URL }} GIT_REF=release-${{ env.VERSION }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
+          oc start-build --wait=true lcfs-frontend-${{ env.VERSION }}
