--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           cd openshift/templates
           oc process -f ./backend-bc.yaml VERSION=${{ env.VERSION }} GIT_URL=${{ env.GIT_URL }} GIT_REF=release-${{ env.VERSION }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
-          oc start-build --wait=true lcfs-backend-build-${{ env.VERSION }}
+          oc start-build --wait=true lcfs-backend-${{ env.VERSION }}
 
       - name: Build LCFS Frontend
         run: |
