--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -17,7 +17,7 @@ env:
   GIT_URL: https://github.com/bcgov/lcfs.git 
   TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-tools
   DEV_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-dev
-  PRE_RELEASE: ''
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -48,11 +48,11 @@ jobs:
         id: set-pre-release
         run: |
           export PRE_RELEASE=$(date +'%Y%m%d%H%M%S')
-
+          echo "PRE_RELEASE=${PRE_RELEASE}" >> $GITHUB_ENV
 
       - name: show pre release
         run: |
-          echo "PRE_RELEASE: ${{env.PRE_RELEASE}}"
+          echo "PRE_RELEASE: $PRE_RELEASE"
 
       # - name: Build LCFS Backend
       #   run: |
