update pre release string

--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -32,7 +32,7 @@ jobs:
     timeout-minutes: 60
 
     outputs:
-      PRE_RELEASE: $${{ steps.set-pre-release.outputs.PRE_RELEASE}}
+      PRE_RELEASE: ${{ steps.set-pre-release.outputs.PRE_RELEASE}}
 
     steps:
 
