--- a/.github/workflows/temp.yaml
+++ b/.github/workflows/temp.yaml
@@ -3,7 +3,7 @@ name: Show Environment Variable
 on:
   workflow_dispatch:
     workflow_call:
-      
+
 jobs:
   create-variable:
     runs-on: ubuntu-latest
@@ -22,4 +22,5 @@ jobs:
 
     steps:
     - name: Display Environment Variable
-      run: echo "Environment Variable: ${{ needs.create-variable.outputs.env-variable }}"
+      run: |
+        echo "Environment Variable: ${{ needs.create-variable.outputs.env-variable }}"
