--- a/.github/workflows/temp.yaml
+++ b/.github/workflows/temp.yaml
@@ -8,13 +8,10 @@ jobs:
   create-variable:
     runs-on: ubuntu-latest
 
-    outputs:
-      envvar: ${{ steps.set-env-variable.outputs.envvar }}
-
     steps:
     - name: Set Environment Variable
       id: set-env-variable
-      run: echo "envvar=Hello" >> $GITHUB_ENV
+      run: echo "envvar=Hello" >> $GITHUB_OUTPUT
 
   show-variable:
     needs: create-variable
@@ -23,4 +20,4 @@ jobs:
     steps:
     - name: Display Environment Variable
       run: |
-        echo "Environment Variable: ${{ needs.create-variable.outputs.envvar }}"
+        echo "Environment Variable: ${{ jobs.create-variable.steps.set-env-variable.outputs.envvar }}"
